--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,14 @@ body {
   gap: 10px;
 }
 
+.answers {
+  font-size: 20px;
+  border-style: groove;
+  border-radius: 6px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
 .turn {
   display: flex;
   justify-content: center;
