Mark answers in panel with green or red symbols.

--- a/src/index.css
+++ b/src/index.css
@@ -158,3 +158,11 @@ body {
   text-align: center;
   margin-top: 20px;
 }
+
+.responseSymbol{
+  font-size: 24px;
+  margin: 0 auto;
+  width: fit-content;
+}
+
+
