--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  min-width: 320px;
   min-height: 100vh;
 }
 
@@ -32,7 +31,7 @@ body {
 
 .board {
   width: fit-content;
-  margin: 40px auto;
+  margin: 5px auto;
   text-align: center;
 }
 
@@ -60,9 +59,11 @@ body {
 }
 
 .board .game {
+  width: 80%;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
+  margin-left: 8%;
 }
 
 .answers {
@@ -154,7 +155,7 @@ body {
 }
 
 .customDiv{
-  width: 400px;
+  width: 370px;
   text-align: center;
   margin-top: 20px;
 }
@@ -165,4 +166,4 @@ body {
   width: fit-content;
 }
 
-
+ol li { list-style:none }
