--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ body {
   background: transparent;
   border: 2px solid #eee;
   color: #eee;
-  width: 100px;
+  width: 40%;
   border-radius: 5px;
   transition: 0.2s;
   font-weight: bold;
