--- a/src/index.css
+++ b/src/index.css
@@ -248,5 +248,22 @@ ol li { list-style:none }
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+  
+  .border_trivial {
+    border-width: 2px;
+    margin-bottom: 10px;
+    border-style: solid;
+    border-top-left-radius: 55px;
+    border-bottom-right-radius: 29px;
+    border-color: #09f;
+    font-size: 20px;
+  }
+
+  .border_sanction_player{
+    color: #c1271b;
+    background-color: rgba(0, 0, 0, 0.7);
+    margin-top: 8px;
+    border-top-left-radius: 35px;
+  }
 }
 
