--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ body {
   transition: 0.2s;
   font-weight: bold;
   cursor: pointer;
+  border-color: #E5B8F4;;
 }
 
 .board button:hover {
@@ -68,9 +69,12 @@ body {
 .answers {
   font-size: 20px;
   border-style: groove;
-  border-radius: 6px;
+  border-radius: 5px;
   margin-top: 15px;
   cursor: pointer;
+  border-style: ridge;
+  border-width: 4px;
+  border-color: #E5B8F4;
 }
 
 .turn {
@@ -263,20 +267,50 @@ ol li { list-style:none }
   }
   
   .border_trivial {
-    border-width: 2px;
+    border-width: 3px;
     margin-bottom: 10px;
-    border-style: solid;
-    border-top-left-radius: 55px;
-    border-bottom-right-radius: 29px;
-    border-color: #09f;
+    /* border-style: solid; */
+    /* border-top-left-radius: 55px; */
+    /* border-bottom-right-radius: 29px; */
+    border-color: #E5B8F4;
     font-size: 20px;
+    background-color: #892d67;
+    border-radius: 3px;
   }
 
   .border_sanction_player{
-    color: #c1271b;
-    background-color: rgba(0, 0, 0, 0.7);
-    margin-top: 8px;
-    border-top-left-radius: 35px;
+    /* color: #c1271b; */
+    background-color: #5F264A;
+    margin-top: 15px;
+    /* border-top-left-radius: 6px;*/
+  }
+
+  .question_number{
+    font-weight: bolder;
+    background-color: #b024de;
+    color: black;
+    /* border-radius: 6px; */
+    margin-top: 10px;
+    font-size: large;
+  }
+
+  .question_image{
+    width: 300px;
+    height: 260px;
+    margin-top: 10px;
+    border-style: solid;
+    border-radius: 7%;
+    border-color: #E5B8F4;
+    border-width: 3px;
+  }
+
+  .answers_style{
+    /* border: 2px solid; */
+    padding: 10px;
+    box-shadow: 5px 3px #E5B8F4;
+    /* border-width: 5px; */
+    /* border-style: ridge; */
+    border-color: #E5B8F4;
   }
 
   
