Change color styles

--- a/src/index.css
+++ b/src/index.css
@@ -218,7 +218,7 @@ ol li { list-style:none }
 }
 
 .btn_nav_bar{
-  color: rgb(0, 153, 255);
+  color: #E8A0BF;
   text-decoration: none;
   font-size: 26px;
   background-color: #242424;
