--- a/src/index.css
+++ b/src/index.css
@@ -265,54 +265,73 @@ ol li { list-style:none }
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
-  
-  .border_trivial {
-    border-width: 3px;
-    margin-bottom: 10px;
-    /* border-style: solid; */
-    /* border-top-left-radius: 55px; */
-    /* border-bottom-right-radius: 29px; */
-    border-color: #E5B8F4;
-    font-size: 20px;
-    background-color: #892d67;
-    border-radius: 3px;
-  }
+}
 
-  .border_sanction_player{
-    /* color: #c1271b; */
-    background-color: #5F264A;
-    margin-top: 15px;
-    /* border-top-left-radius: 6px;*/
-  }
+.border_trivial {
+  border-width: 3px;
+  margin-bottom: 10px;
+  /* border-style: solid; */
+  /* border-top-left-radius: 55px; */
+  /* border-bottom-right-radius: 29px; */
+  border-color: #E5B8F4;
+  font-size: 20px;
+  background-color: #892d67;
+  border-radius: 3px;
+}
 
-  .question_number{
-    font-weight: bolder;
-    background-color: #b024de;
-    color: black;
-    /* border-radius: 6px; */
-    margin-top: 10px;
-    font-size: large;
-  }
+.border_sanction_player{
+  /* color: #c1271b; */
+  background-color: #5F264A;
+  margin-top: 15px;
+  /* border-top-left-radius: 6px;*/
+}
 
-  .question_image{
-    width: 300px;
-    height: 260px;
-    margin-top: 10px;
-    border-style: solid;
-    border-radius: 7%;
-    border-color: #E5B8F4;
-    border-width: 3px;
-  }
+.question_number{
+  font-weight: bolder;
+  background-color: #865DFF;
+  color: black;
+  /* border-radius: 6px; */
+  margin-top: 10px;
+  font-size: large;
+}
 
-  .answers_style{
-    /* border: 2px solid; */
-    padding: 10px;
-    box-shadow: 5px 3px #E5B8F4;
-    /* border-width: 5px; */
-    /* border-style: ridge; */
-    border-color: #E5B8F4;
-  }
+.question_image{
+  width: 300px;
+  height: 260px;
+  margin-top: 10px;
+  border-style: solid;
+  border-radius: 7%;
+  border-color: #E5B8F4;
+  border-width: 3px;
+}
 
-  
+.answers_style{
+  /* border: 2px solid; */
+  padding: 10px;
+  box-shadow: 5px 3px #E5B8F4;
+  /* border-width: 5px; */
+  /* border-style: ridge; */
+  border-color: #E5B8F4;
+}
+
+.questions_support_form_input_text{
+  background-color: #c9c17e2b;
+  /* color: red; */
+  width: 70%;
+  margin: 10px;
+  font-size: unset;
+  border-radius: 10p;
+  color: white;
+}
+
+.questions_support_form_text_area{
+  background-color: #c9c17e2b;
+  /* color: red; */
+  width: 70%;
+  margin: 10px;
+  font-size: unset;
+  border-radius: 10p;
+  color: white;
+  resize: none;
 }
 
