--- a/src/index.css
+++ b/src/index.css
@@ -293,6 +293,7 @@ ol li { list-style:none }
   /* border-radius: 6px; */
   margin-top: 10px;
   font-size: large;
+  margin-bottom: 12px;
 }
 
 .question_image{
@@ -335,5 +336,20 @@ ol li { list-style:none }
   color: white;
   resize: none;
   font-family: sans-serif;
+}
+
+.time_to_go_question{
+  background-color: #FFA3FD;
+  /* color: red; */
+  font-size: x-large;
+  border-radius: 10p;
+  color: white;
+  color: black;
+  font-weight: bolder;
+  border-radius: 5px;
+  display: inline-table;
+  border-style: solid;
+  border-color: #111;
+  width: 20%;
 }
 
