--- a/src/index.css
+++ b/src/index.css
@@ -291,10 +291,11 @@ ol li { list-style:none }
   font-weight: bolder;
   background-color: #865DFF;
   color: black;
-  /* border-radius: 6px; */
-  margin-top: 10px;
-  font-size: large;
-  margin-bottom: 12px;
+  border-radius: 6px;  
+  margin-top: 5px;
+  margin-bottom: 9px;
+  height: 1.1em;
+  font-size: 20px;
 }
 
 .question_image{
@@ -353,4 +354,27 @@ ol li { list-style:none }
   border-color: #111;
   width: 20%;
 }
+
+.time_to_go_question_time{
+  /* color: red; */
+  font-size: x-large;
+  border-radius: 10p;
+  color: white;
+  color: black;
+  font-weight: bolder;
+  border-radius: 5px;
+  display: inline-table;
+}
+
+.points_accumulated{
+  font-weight: bolder;
+  background-color: #dcd584;
+  color: black;
+  border-radius: 6px;
+  margin-top: 5px;
+  margin-bottom: 9px;
+  height: 1.3em;
+  font-size: 20px;
+}
+
 
