--- a/src/index.css
+++ b/src/index.css
@@ -382,6 +382,7 @@ ol li { list-style:none }
     text-decoration: none;
     font-size: 24px;
     width: 10%;
+    margin: 0px;
 }
 
 .name_player {
@@ -389,7 +390,7 @@ ol li { list-style:none }
   border-radius: 8px;
   font-family: sans-serif;
   text-align: center;
-  height: 40px;
+  height: 37px;
 }
 
 
