Minor bugs fixed.

--- a/src/index.css
+++ b/src/index.css
@@ -219,7 +219,7 @@ ol li { list-style:none }
 }
 
 .btn_nav_bar{
-  color: #6f4499;
+  color: #b284e0;
   text-decoration: none;
   font-size: 26px;
   background-color: #242424;
