Add multiplayer functionality

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
 
 .board button{
   padding: 0.5em 6px;
-  margin: 25px;
+  margin: 0.7em;
   background: #6a0a6a;
   /* border: 2px solid #eee; */
   color: #fbf8f8;
