--- a/src/index.css
+++ b/src/index.css
@@ -360,6 +360,8 @@ ol li { list-style:none }
   border-radius: 7%;
   border-color: #E5B8F4;
   border-width: 3px;
+  z-index: 8;
+  opacity: 0.8;
 }
 
 .answers_style{
@@ -473,5 +475,34 @@ textarea::placeholder {
   display: inline-table;
   width: 75%;
 }
+
+.correct_answer{
+  color: #242424;
+    background-color: #00c725;
+    font-size: 28px;
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-left: 115px;
+    padding: 20px;
+    position: absolute;
+    align-items: center;
+    z-index: 3;
+    -webkit-transform: rotate(10deg);
+}
+
+.incorrect_answer{
+  color: #242424;
+    background-color: red;
+    font-size: 28px;
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-left: 115px;
+    padding: 20px;
+    position: absolute;
+    align-items: center;
+    z-index: 3;
+    -webkit-transform: rotate(-10deg);
+}
+
 
 
