--- a/src/index.css
+++ b/src/index.css
@@ -81,13 +81,12 @@ body {
 }
 
 .answers {
-  font-size: 17px;
-  border-style: groove;
-  border-radius: 5px;
+  font-size: 15px;
+  border-radius: 13px;
   margin-top: 12px;
   cursor: pointer;
   border-style: ridge;
-  border-width: 4px;
+  border-width: 1px;
   border-color: #E5B8F4;
 }
 
@@ -175,7 +174,7 @@ body {
   width: 340px;
   text-align: center;
   margin-top: 10px;
-  font-size: 19px;
+  font-size: 17px;
 }
 
 .responseSymbol{
@@ -343,21 +342,21 @@ ol li { list-style:none }
 
 .question_number{
   font-weight: bolder;
-  background-color: #865DFF;
-  color: black;
-  border-radius: 6px;  
+  color: #865DFF;
+  border-radius: 2px;  
   margin-top: 5px;
   margin-bottom: 9px;
-  height: 1.1em;
-  font-size: 20px;
+  height: 1.3em;
+  font-size: x-large;
+  
 }
 
 .question_image{
-  width: 250px;
+  width: 315px;
   height: 210px;
   margin-top: 10px;
   border-style: solid;
-  border-radius: 7%;
+  border-radius: 3%;
   border-color: #E5B8F4;
   border-width: 3px;
   z-index: 8;
@@ -395,7 +394,6 @@ ol li { list-style:none }
 .time_to_go_question_normal{
   background-color: #FFA3FD;
   /* color: red; */
-  font-size: x-large;
   border-radius: 10p;
   color: white;
   color: black;
@@ -405,12 +403,12 @@ ol li { list-style:none }
   border-style: solid;
   border-color: #111;
   width: 20%;
+  font-size: 1.2em;
 }
 
 .time_to_go_question_red{
   background-color: #dc0909;
   /* color: red; */
-  font-size: x-large;
   border-radius: 10p;
   color: white;
   color: black;
@@ -420,17 +418,32 @@ ol li { list-style:none }
   border-style: solid;
   border-color: #111;
   width: 20%;
+  font-size: 1.2em;
 }
 
 .time_to_go_question_time{
   /* color: red; */
-  font-size: x-large;
-  border-radius: 10p;
-  color: white;
-  color: black;
+  font-size: 1.25em;
+  color: #865DFF;
   font-weight: bolder;
   border-radius: 5px;
   display: inline-table;
+  margin-top: 0.75em;
+}
+
+.aciertos {
+  font-size: 20px;
+  font-weight: bold;
+  color: #FF00FF; /* Magenta */
+  text-align: center;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7); /* Sombra sutil en el texto */
+  padding: 6px 16px;
+  border-radius: 12px;
+  background: linear-gradient(145deg, #2a2a2a, #1e1e1e); /* Fondo con un gradiente sutil */
+  box-shadow: 
+    0 3px 5px rgba(0, 0, 0, 0.3), /* Sombra externa suave */
+    0 0 6px rgba(255, 0, 255, 0.3); /* Resplandor tenue */
+  margin-top: 0.65em;
 }
 
 .points_accumulated{
